# api-whatsapp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json  waha_automator.py
.claude/: settings.local.json
api/: __init__.py
api/core/: __init__.py  config.py  exceptions.py  waha_client.py
api/routes/: __init__.py  contacts.py  health.py  messages.py  send.py  webhook.py
templates/: appointment_reminder.json  custom_welcome.json  order_confirmation.json
